force-app/main/default/objects/Appointment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120-Position Number Change</fullName>
            </value>
            <value>
                <fullName>405-Time Base Change</fullName>
            </value>
            <value>
                <fullName>565-Reinstatement from IDL/TD</fullName>
            </value>
            <value>
                <fullName>A01-CEA appointment from list</fullName>
            </value>
            <value>
                <fullName>A01-Graduate Student Assistant</fullName>
            </value>
            <value>
                <fullName>A01-Limited Term from List</fullName>
            </value>
            <value>
                <fullName>A01-Permanent Appointment from List</fullName>
            </value>
            <value>
                <fullName>A01-Student Assistant</fullName>
            </value>
            <value>
                <fullName>A01-TAU in Lieu of Limited Term</fullName>
            </value>
            <value>
                <fullName>A01-TAU in Lieu of Permanent Appointment</fullName>
            </value>
            <value>
                <fullName>A01-Youth Aid</fullName>
            </value>
            <value>
                <fullName>A02-Emergency</fullName>
            </value>
            <value>
                <fullName>A02-Reinstatement (permissive)</fullName>
            </value>
            <value>
                <fullName>A02-Retired Annuitant</fullName>
            </value>
            <value>
                <fullName>A02-Transfer</fullName>
            </value>
            <value>
                <fullName>A03-Reinstatement (mandatory)</fullName>
            </value>
            <value>
                <fullName>A03-Reinstatement from LOA</fullName>
            </value>
            <value>
                <fullName>A03-Reinstatement from NDI</fullName>
            </value>
            <value>
                <fullName>A03-Reinstatement from SDI</fullName>
            </value>
            <value>
                <fullName>A04-Training &amp; Development</fullName>
            </value>
            <value>
                <fullName>A11-Involuntary Reassignment</fullName>
            </value>
            <value>
                <fullName>A14 - Adverse Demotion</fullName>
            </value>
            <value>
                <fullName>A20-Reallocation</fullName>
            </value>
            <value>
                <fullName>A22-In Lieu of Appt through Cert Process</fullName>
            </value>
            <value>
                <fullName>A30/A31-Exempt</fullName>
            </value>
            <value>
                <fullName>SPC-Special Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>