force-app/main/default/objects/Appointment__c/fields/Type_of_Separation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Separation__c</fullName>
    <label>Type of Separation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120 Position # change</fullName>
            </value>
            <value>
                <fullName>405 Time Base Change</fullName>
            </value>
            <value>
                <fullName>565-IDL</fullName>
            </value>
            <value>
                <fullName>565-TD</fullName>
            </value>
            <value>
                <fullName>Reallocation-(A20)</fullName>
                <label>Reallocation (A20)</label>
            </value>
            <value>
                <fullName>S01-Resignation</fullName>
            </value>
            <value>
                <fullName>S05-Resignation Without Fault</fullName>
            </value>
            <value>
                <fullName>S21-AWOL</fullName>
            </value>
            <value>
                <fullName>S31-No Layoff</fullName>
            </value>
            <value>
                <fullName>S40-Termination with fault</fullName>
            </value>
            <value>
                <fullName>S41-Dismissal</fullName>
            </value>
            <value>
                <fullName>S49-NDI</fullName>
            </value>
            <value>
                <fullName>S50-Leave of Absence</fullName>
            </value>
            <value>
                <fullName>S50-SDI Leave of Absence</fullName>
            </value>
            <value>
                <fullName>S51-Military</fullName>
            </value>
            <value>
                <fullName>S57 Pending Disability</fullName>
            </value>
            <value>
                <fullName>S70-Service Retirement</fullName>
            </value>
            <value>
                <fullName>S71-Disability Retirement</fullName>
            </value>
            <value>
                <fullName>S80 Termination-Illegal Appointment</fullName>
            </value>
            <value>
                <fullName>S85-Adverse Suspension</fullName>
            </value>
            <value>
                <fullName>S90-Probe Rejection</fullName>
            </value>
            <value>
                <fullName>S95-Death</fullName>
            </value>
            <value>
                <fullName>SPC-Special Change</fullName>
            </value>
            <value>
                <fullName>Transfer/Promotion within DIR</fullName>
            </value>
            <value>
                <fullName>Transfer to another Agency/Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>