force-app/main/default/objects/Appointment__c/fields/Vacated_Position__c.field-meta.xml
<CustomField>
    <fullName>Vacated_Position__c</fullName>
    <label>Vacated DIR Position Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>