force-app/main/default/objects/Appointment__c/validationRules/Appointment_Type_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Type_Required_Field</fullName>
    <active>true</active>
    <description>Appointment Type is a required field</description>
    <errorConditionFormula>NOT( Start_Date__c  &lt;  DATEVALUE(&quot;2016-05-18&quot;))
&amp;&amp; ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorMessage>Please fill in Appointment Type field</errorMessage>
</ValidationRule>