force-app/main/default/objects/Appointment__c/validationRules/Bilingual_With_Date_but_no_Language.validationRule-meta.xml
<ValidationRule>
    <fullName>Bilingual_With_Date_but_no_Language</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   Rec_Bilingual_Pay__c ,
   !ISNULL( Bilingual_Effective_Date__c),
   ISBLANK ( Other_Language__c ),
   ISPICKVAL( Language__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Language__c</errorDisplayField>
    <errorMessage>Please select or Enter a Bilingual Language</errorMessage>
</ValidationRule>