force-app/main/default/objects/Appointment__c/validationRules/Bilingual_With_No_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Bilingual_With_No_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   Rec_Bilingual_Pay__c,
   ISNULL( Bilingual_Effective_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Bilingual_Effective_Date__c</errorDisplayField>
    <errorMessage>Please enter an Effective Date for Bilingual Pay</errorMessage>
</ValidationRule>