force-app/main/default/objects/Appointment__c/validationRules/Bilingual_With_No_Language_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Bilingual_With_No_Language_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   Rec_Bilingual_Pay__c,
   ISPICKVAL( Language__c, &#39;&#39; ),
   ISBLANK( Other_Language__c ) 
)</errorConditionFormula>
    <errorDisplayField>Language__c</errorDisplayField>
    <errorMessage>Please select a Bilingual Language</errorMessage>
</ValidationRule>