force-app/main/default/objects/Appointment__c/validationRules/Hiring_Type_Current_DIR_EE.validationRule-meta.xml
<ValidationRule>
    <fullName>Hiring_Type_Current_DIR_EE</fullName>
    <active>true</active>
    <description>When hiring is Current DIR EE, Previous Position Number and Dividsion/Dept are  required</description>
    <errorConditionFormula>AND ( (NOT(CONTAINS($Profile.Name,&#39;System Administrator&#39;))),
(

ISPICKVAL(Hiring_Type__c, &quot;Current DIR EE&quot;)
&amp;&amp; 
(
ISPICKVAL( Type__c , &quot;A01-Permanent Appointment from List&quot;)
||
ISPICKVAL( Type__c , &quot;A01-CEA appointment from list&quot;)
||
ISPICKVAL( Type__c , &quot;A01-Limited Term from List&quot;)
||
ISPICKVAL( Type__c , &quot;A01-Student Assistant&quot;)
||
ISPICKVAL( Type__c , &quot;A01-Graduate Student Assistant&quot;)
||
ISPICKVAL( Type__c , &quot;A01-Youth Aid&quot;)
||
ISPICKVAL( Type__c , &quot;A01-TAU in Lieu of Limited Term&quot;)
||
ISPICKVAL( Type__c , &quot;A01-TAU in Lieu of Permanent Appointment&quot;)
||
ISPICKVAL( Type__c , &quot;A02-Reinstatement (permissive)&quot;)
||
ISPICKVAL( Type__c , &quot;A02-Emergency&quot;)
||
ISPICKVAL( Type__c , &quot;A02-Retired Annuitant&quot;)
||
ISPICKVAL( Type__c , &quot;A02-Transfer&quot;)
||
ISPICKVAL( Type__c , &quot;A04-Training &amp; Development&quot;)
||
ISPICKVAL( Type__c , &quot;A30/A31-Exempt&quot;)
||
ISPICKVAL( Type__c , &quot;A22-In Lieu of Appt through Cert Process&quot;)
||
ISPICKVAL( Type__c , &quot;120-Position Number Change&quot;)
||
ISPICKVAL( Type__c , &quot;A11-Involuntary Reassignment&quot;)
||
ISPICKVAL( Type__c , &quot;A14 - Adverse Demotion&quot;)

)
&amp;&amp;
(
Previous_Position_Number__c=&#39;&#39;
||  
ISPICKVAL( Transferred_from_Division_or_Dept__c ,&#39;&#39;)
)
)
)</errorConditionFormula>
    <errorMessage>Please provide Previous Position Number and Transferred from Division or Dept.</errorMessage>
</ValidationRule>