force-app/main/default/objects/Appointment__c/validationRules/Hiring_Type_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Hiring_Type_Required_Field</fullName>
    <active>true</active>
    <description>Hiring Type is a Required Field</description>
    <errorConditionFormula>NOT( Start_Date__c  &lt;  DATEVALUE(&quot;2016-05-18&quot;))
&amp;&amp; ISBLANK(TEXT( Hiring_Type__c ))</errorConditionFormula>
    <errorMessage>Please fill in Hiring Type field</errorMessage>
</ValidationRule>