force-app/main/default/objects/Appointment__c/validationRules/Separation_Type_Required_when_Appt_Ends.validationRule-meta.xml
<ValidationRule>
    <fullName>Separation_Type_Required_when_Appt_Ends</fullName>
    <active>true</active>
    <description>Field &quot;Type of Separation&quot; is required when appointment has an end date</description>
    <errorConditionFormula>AND ( (NOT(CONTAINS($Profile.Name,&#39;System Administrator&#39;))),
(

NOT(ISBLANK(End_Date__c)) &amp;&amp;  ISPICKVAL( Type_of_Separation__c ,&#39;&#39;)

))</errorConditionFormula>
    <errorMessage>Please Select Type of Separation</errorMessage>
</ValidationRule>