force-app/main/default/objects/Appointment__c/validationRules/Separation_Type_State_Transfer_Promo.validationRule-meta.xml
<ValidationRule>
    <fullName>Separation_Type_State_Transfer_Promo</fullName>
    <active>true</active>
    <description>when Transfer/promo within state, &quot;Vacated Position&quot; is required.</description>
    <errorConditionFormula>AND ( (NOT(CONTAINS($Profile.Name,&#39;System Administrator&#39;))),
(

(
ISPICKVAL(Type_of_Separation__c , &quot;Transfer/Promotion within DIR&quot;)
||
ISPICKVAL(Type_of_Separation__c , &quot;Transfer to another Agency/Department&quot;)
||
ISPICKVAL(Type_of_Separation__c , &quot;120 Position # change&quot;)
||
ISPICKVAL(Type_of_Separation__c , &quot;S05-Resignation Without Fault&quot;)
)
&amp;&amp;
(
Vacated_Position__c =&#39;&#39;
||
   ISPICKVAL(Transferred_to_Division_or_Dept__c,&#39;&#39;)
)

))</errorConditionFormula>
    <errorMessage>Please provide &#39;Transferred to Division or Dept&#39; and &#39;Vacated Position&#39; information&#39;</errorMessage>
</ValidationRule>